bugfix test env

--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -3,22 +3,21 @@ channels:
 
   - conda-forge
 
-  - defaults dependencies:
+  - defaults
+dependencies:
     # Base depends
   - python
   - pip
 
-    # Package dependencies
-  - numpy
-  - rdkit
-  - pandas
-    
-  # Testing
+    # Testing
   - pytest
   - pytest-cov
   - codecov
 
+  - numpy
+  - rdkit
+  - pandas
+
   # Pip-only installs
   #- pip:
   #  - codecov
-
