helper scripts, update manuscript, rdchiral_cpp environment

--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -17,7 +17,9 @@ dependencies:
   - numpy
   - rdkit
   - pandas
+  - joblib
 
   # Pip-only installs
   - pip:
-    - rdchiral
+    - git+https://github.com/hesther/rdchiral.git
+    - git+https://gitlab.com/mefortunato/template-relevance.git
