--- a/environment_scripts.yml
+++ b/environment_scripts.yml
@@ -10,9 +10,9 @@ dependencies:
   - pip
   - rdkit
   - pandas
-  - tensorflow=2.0
+  - tensorflow=2.0.0
   - joblib
-  - scikit-learn
+  - scikit-learn=0.24
   - pip:
      - git+https://github.com/hesther/rdchiral.git
 
