--- a/environment_scripts.yml
+++ b/environment_scripts.yml
@@ -12,6 +12,7 @@ dependencies:
   - pandas
   - tensorflow=2.0.0
   - joblib
+  - tqdm
   - scikit-learn=0.24
   - pip:
      - git+https://github.com/hesther/rdchiral.git
